[package]
name = "parquet-bench"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "opendal"
path = "src/opendal.rs"
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
log = "0.4"
opendal = "0.23.0"
parquet2 = "0.17.1"
tokio = { version = "1.20" , features=["full"]}
