[package]
name = "parquet-bench"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "opendal"
path = "src/opendal.rs"
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2"
anyhow = { version = "1.0", features = ["std"] }
opendal = "0.23.0"
parquet2 = {version = "0.17.1", features = ["full"]}
tokio = { version = "1.20" , features=["full"]}
